Updated dissertation and added png to files

--- a/dissertation/sections/02-motivation.tex
+++ b/dissertation/sections/02-motivation.tex
@@ -3,7 +3,7 @@
 
 \chapter{Motivation}
 
-There is limited research and development of software in regards to the visualisation of massive networks in a browser. A solution for companies who require network visualisation can be to use existing software (whether open source or with a license attached), or to develop their own software. SAS \cite{sas} have developed their own network visualisation software (for example, within the SAS product, Visual Investigator \cite{sasvi}) which performs well for up to a few thousand nodes, but begins to struggles when the number of nodes exceeds that - in relation to processing power, system memory and bandwidth. As a result, SAS, who explicitly support this project, are keen to find ways for larger networks to be visualised both with high performance and high information throughput.
+There is limited research and development of software in regards to the visualisation of massive networks in a browser. A solution for companies who require network visualisation can be to use existing software (whether open source or with a license attached), or to develop their own software. SAS \cite{sas} have developed their own network visualisation software (for example, within the SAS product, Visual Investigator \cite{sasvi}) which performs well for up to a few thousand nodes, but begins to struggle when the number of nodes exceeds that - in relation to processing power, system memory and bandwidth. As a result, SAS, who explicitly support this project, are keen to find ways for larger networks to be visualised both with high performance and high information throughput.
 
 The solution to this problem is either to enhance the existing software or develop new solutions. If the current software was to be improved, then the goal would be to find out what bottlenecks exist throughout the process of loading a network, and then try to minimise the impact of the bottlenecks. If new solutions were to be created, then there are several possible ways the software's performance could be improved:
 
