--- a/dissertation/sections/04-research.tex
+++ b/dissertation/sections/04-research.tex
@@ -13,22 +13,22 @@ In regards to the visualisation of massive networks, some important techniques l
 
 \subsection{Node bundling}
 \label{sec:node_bundling}
-This is when software uses algorithms to decide (with or without some form of user input) which nodes are very similar to each other, and upon establishing this relationship, groups them in to one node, generally visually different in some way (often by size or colour). It "creates a less complicated visualization without losing connectivity information by automatically abstracting small [...] subgraphs" \cite{six2003effective}. This allows for hundreds or thousands of nodes to be grouped into one node and hence take up for less memory, processing power, bandwidth and screen space on the users machine. A way to make this even more helpful is to show how the nodes being bundled interact with themselves, for example if they are heavily connected or all connected to just a few nodes, or if they are in a ring formation. See Figure \ref{fig:bundling} for an example of both node and edge bundling.
+This is when software uses algorithms to decide (with or without some form of user input) which nodes are very similar to each other, and upon establishing this relationship, groups them in to one node, generally visually different in some way (often by size or colour). It ``creates a less complicated visualization without losing connectivity information by automatically abstracting small [...] subgraphs'' \cite{six2003effective}. This allows for hundreds or thousands of nodes to be grouped into one node and hence take up for less memory, processing power, bandwidth and screen space on the users machine. A way to make this even more helpful is to show how the nodes being bundled interact with themselves, for example if they are heavily connected or all connected to just a few nodes, or if they are in a ring formation. See Figure \ref{fig:bundling} for an example of both node and edge bundling.
     
 \subsection{Edge bundling}
 \label{sec:edge_bundling}
-This is similar to node bundling but applied to edges. It "trade clutter for overdraw by routing related edges along similar paths" \cite{hurter2012graph}, and "can be seen as sharpening the edge spatial density, by making it high along bundles and low elsewhere"\cite{hurter2012graph}. If node bundling is done then this process will have less of an impact as all of the edges will already be bundled together assuming the node bundling algorithm was optimal. Like node bundling, it is often shown through the change of the size of the edge or the colour. See Figure \ref{fig:bundling} for an example of both node and edge bundling.
+This is similar to node bundling but applied to edges. It ``trade[s] clutter for overdraw by routing related edges along similar paths'' \cite{hurter2012graph}, and ``can be seen as sharpening the edge spatial density, by making it high along bundles and low elsewhere'' \cite{hurter2012graph}. If node bundling is done then this process will have less of an impact as all of the edges will already be bundled together, assuming the node bundling algorithm was optimal. Like node bundling, it is often shown through the change of the size of the edge or the colour. See Figure \ref{fig:bundling} for an example of both node and edge bundling.
 \begin{figure}
     \centering
     \includegraphics[width=12cm]{4/bundling1}
     \\$\downarrow$\\
     \includegraphics[width=12cm]{4/bundling2}
-    \caption{Demonstrates both node and edge bundling, where thickness of edge displays how many edges there are, and size of node indicates number of nodes group. On top of that, each node displays how nodes within it were connected together. This particular example display the comparison between the common graph visualization and ModulGraph-based graph visualization. \cite{li2015modulgraph}}
+    \caption{Demonstrates both node and edge bundling, where thickness of edge displays how many edges there are, and size of node indicates number of nodes group. On top of that, each node displays how nodes within it were connected together. This particular example displays the comparison between the common graph visualization and ModulGraph-based graph visualization. \cite{li2015modulgraph}}
     \label{fig:bundling}
 \end{figure}
 
 \subsection{Local Edge Lens}
-This involves rendering all or part of the graph, and upon focusing on a section of the graph, that part is zoomed in or clarified as if through a lens and that part of the graph is zoomed in, becoming more clear. Another way of implementing this can be that when the lens is applied, it can render more information that was not shown before in order to save computational power. "By doing so, the cluttering of edges is removed for a local focus region defined by the position and scope of the lens" \cite{tominski2006fisheye} See Figure \ref{fig:local}.
+This involves rendering all or part of the graph, and upon focusing on a section of the graph, that part is zoomed in or clarified as if through a lens and that part of the graph is zoomed in, becoming more clear. Another way of implementing this can be that when the lens is applied, it can render more information that was not shown before in order to save computational power. ``By doing so, the cluttering of edges is removed for a local focus region defined by the position and scope of the lens'' \cite{tominski2006fisheye} See Figure \ref{fig:local}.
 \begin{figure}
     \centering
     \includegraphics[width=8cm]{4/local}
