--- a/dissertation/sections/02-motivation.tex
+++ b/dissertation/sections/02-motivation.tex
@@ -17,7 +17,7 @@ The solution to this problem is either to enhance the existing software or devel
 	\item Different tools could be explored that could make visualisations clearer to the user
 \end{itemize}
 
-Following discussion with peers and then conducting initial research, it was found that there was little research done into massive network visualisation. Csardi and Nepusz have stated that there is a "lack of network analysis software which can handle large graphs efficiently, and can be embedded into a higher level program or programming language (like Python, Perl or GNU R)" \cite{csardi2006igraph}. Another article, by Chen and Chaomei, declared that there is "A prolonged lack of low-cost, ready-to-use, and reconfigurable information visualization systems" \cite{chen2005top}. 
+Following discussion with peers and then conducting initial research, it was found that there was little research done into massive network visualisation. Csardi and Nepusz have stated that there is a ``lack of network analysis software which can handle large graphs efficiently, and can be embedded into a higher level program or programming language (like Python, Perl or GNU R)'' \cite{csardi2006igraph}. Another article, by Chen and Chaomei, declared that there is ``A prolonged lack of low-cost, ready-to-use, and reconfigurable information visualization systems'' \cite{chen2005top}. 
 
 There are two important metrics to consider for massive network visualisation: the time it will take to visualise the networks from the user asking for it, and the amount of useful information the user will get from the displayed network. If neither of these criteria are met then the visualisation software is unusable. If the system is slow but displays useful information at the end then the system is not very user friendly, but can still be useful. Finally, if the system is both fast and displays useful information then it an optimal network visualisation system.
 
