--- a/dissertation/sections/04-research.tex
+++ b/dissertation/sections/04-research.tex
@@ -23,12 +23,12 @@ This is similar to node bundling but applied to edges. It ``trade[s] clutter for
     \includegraphics[width=12cm]{4/bundling1}
     \\$\downarrow$\\
     \includegraphics[width=12cm]{4/bundling2}
-    \caption{Demonstrates both node and edge bundling, where thickness of edge displays how many edges there are, and size of node indicates number of nodes group. On top of that, each node displays how nodes within it were connected together. This particular example displays the comparison between the common graph visualization and ModulGraph-based graph visualization. \cite{li2015modulgraph}}
+    \caption{Demonstrates both node and edge bundling, where thickness of edge displays how many edges there are, and size of node indicates number of nodes group. On top of that, each node displays how nodes within it were connected together. This particular example displays a comparison between a common network visualisation and a ModulGraph-based network visualisation. \cite{li2015modulgraph}}
     \label{fig:bundling}
 \end{figure}
 
 \subsection{Local Edge Lens}
-This involves rendering all or part of the graph, and upon focusing on a section of the graph, that part is zoomed in or clarified as if through a lens and that part of the graph is zoomed in, becoming more clear. Another way of implementing this can be that when the lens is applied, it can render more information that was not shown before in order to save computational power. ``By doing so, the cluttering of edges is removed for a local focus region defined by the position and scope of the lens'' \cite{tominski2006fisheye} See Figure \ref{fig:local}.
+This involves rendering all or part of the network, and upon focusing on a section of the network, that part is zoomed in or clarified as if through a lens and that part of the network is zoomed in, becoming more clear. Another way of implementing this can be that when the lens is applied, it can render more information that was not shown before in order to save computational power. ``By doing so, the cluttering of edges is removed for a local focus region defined by the position and scope of the lens'' \cite{tominski2006fisheye} See Figure \ref{fig:local}.
 \begin{figure}
     \centering
     \includegraphics[width=8cm]{4/local}
@@ -45,7 +45,7 @@ This involves using an algorithm to remove certain nodes or edges that are deeme
     \label{fig:deletion}
 \end{figure}
 
-\section{Current Graphing Software}
+\section{Current Network Visualisation Software}
 
 On top of finding out techniques used by software for large network visualisation, a list was also created of all software that was mentioned in papers or found during research that was related to large network visualisation. Quite often, the software mentioned had been hand-made for that project and was not feature complete, or the software could only be used for a price, but the below list contains the names of software that seemed reasonable to look further into, found by searching online and through mentions from papers:
 \begin{itemize}
