--- a/dissertation/sections/05-systematic-rev.tex
+++ b/dissertation/sections/05-systematic-rev.tex
@@ -6,7 +6,7 @@
 
 \section{Aim} 
 
-The goal of the review was to look into several different types of network visualisation software, and as a result, find out more about how it works. The software would be analysed for several characteristics, both related to general graphing of networks, and graphing of specifically huge networks.
+The goal of the review was to look into several different types of network visualisation software, and as a result, find out more about how it works. The software would be analysed for several characteristics, both related to the visualising of networks and the visualisation of specifically huge networks.
 
 \section{Methodology}
 
@@ -16,7 +16,7 @@ The first criteria to assess would be how easy it is to get a basic network (5 o
 
 Additionally, another criteria was how easy it is to load a network from a file or save a network to a file. These were important as a system would have limited use if it did not allow a user to upload networks, and allowing users to save networks (potentially after it was modified by the system or the user) would mean the network could be loaded in from another system or at a later date. 
 
-The next features to be analysed were based on interactivity - how easily can a user edit the network to get more useful information out of it. This would include the ability to zoom into a part of the network or being able to pan. A more complex feature (that would be rarely used but would occasionally add valuable information to the user) would be the ability to make it dynamic - showing the change in a graph over time (or another parameter). 
+The next features to be analysed were based on interactivity - how easily can a user edit the network to get more useful information out of it. This would include the ability to zoom into a part of the network or being able to pan. A more complex feature (that would be rarely used but would occasionally add valuable information to the user) would be the ability to make it dynamic - showing the change in a network over time (or another parameter). 
 
 A major criteria would then be how well the software would scale up to massive networks - this would include running tests on increasingly large networks and seeing how long the software took, and also if it includes node or edge bundling, or other ways of increasing clarity of massive networks. Time taken to render is also an important statistic, but less critical than the clarity of the massive amounts being displayed. This is perhaps the most vital category as no matter the above features, if the network is not clear for huge numbers of nodes or edges then it does not provide a solution to the problem at hand. An additional feature to increase user clarity would be the ability to view the network in many different layouts, which would give users more flexibility and would often lead to a better understanding of the network. 
 
@@ -31,15 +31,15 @@ This set of criteria, both qualitative and quantitative (to maximise information
 		\item Is it comprehensive: are all aspects of the software fully documented?
 		\item Length of time spent reading until confident in using the system: how long was spent reading documentation before programming using the system could begin?
 	\end{enumerate}
-	\item \textbf{Time until a simple graph could be displayed?}\\
-	After finishing reading the documentation and starting to use the software, how long did it take to create a hard-coded graph with three nodes and two edges? These values were chosen as they represent a very basic graph that should be instantaneous to load in nearly all systems, but an understanding of the software is still required to display the network.
+	\item \textbf{Time until a simple network could be displayed?}\\
+	After finishing reading the documentation and starting to use the software, how long did it take to create a hard-coded network with three nodes and two edges? These values were chosen as they represent a very basic network that should be instantaneous to load in nearly all systems, but an understanding of the software is still required to display the network.
 	\item \textbf{Can a file be loaded into the system?}\\
 	Is there a way to load a file (whether in a standard file format such as JSON or XML, or in a custom file format) into the software? If this is possible, even only in one file format, then a script could be written in order to convert from that file format to whatever necessary file format was needed. 
 	\item \textbf{Can a network be exported to a file?}\\
 	Is there a way to export a network to a file, in the form of a representation of the network, such as JSON or XML? This would mean that the network could be easily passed between software applications and across a network.
 	\item \textbf{Can a network be exported to an image?}\\
 	Could the network be exported to a file as an image, such as a PNG or a JPEG? This is useful as images will generally be far smaller than representations of the image in code, such as JSON or XML, and hence are far easier and quicker to send or store on a machine.
-	\item \textbf{How long it took to render the graph of:}
+	\item \textbf{How long it took to render a network of:}
 	\begin{enumerate}
 	    \item 30 nodes
 	    \item 200 nodes
@@ -55,23 +55,23 @@ This set of criteria, both qualitative and quantitative (to maximise information
 	\end{enumerate}
 	\item \textbf{Can a network be dynamic?}\\
 	This would allow for information to be viewed across multiple points in time? This allows certain types of information to be visualised far more easily, in particular when data has been been collected over a long time period over which relationships between the data evolve.
-	\item \textbf{Does the software included features for displaying huge graphs:}
+	\item \textbf{Does the software included features for displaying huge networks:}
 	\begin{enumerate} 
 		\item Node Bundling: See section \ref{sec:node_bundling}.
 		\item Edge Bundling: See section \ref{sec:edge_bundling}.
 		\item Alternative layout options: This includes the ability to change what algorithms decide how the network is laid out.
 	\end{enumerate}
-	\item \textbf{Can a graph be multivariate?}\\
+	\item \textbf{Can a network be multivariate?}\\
 	Does the software support nodes being grouped in some way? This could be in many ways, such as based on shape or colour, and would allow users to distinguish different catagories of data.
 	\item \textbf{Is there a possibility of changing graphical settings for the network?}\\
 	Can nodes or edges be coloured differently at the users request? This could be done by changing their shape, size, colour or outline?
-	\item \textbf{Can a graph be displayed in 3D?}\\
+	\item \textbf{Can a network be displayed in 3D?}\\
 	Is there a way to view the network in three dimensions, for example as a globe? This allows for a unique insight into the data and can often make the data a lot easier to comprehend and/or reveal more subtle relationships in the data.
 	\item \textbf{Any other idiosyncrasies?}\\
 	Is there any other aspects of the software of worth that is not identified above?
 \end{enumerate}
 
-Each piece of software was evaluated against this criteria, with the goal of both finding out which pieces of software were more successful over many parameters, and also to become more familiar with graphing software used in industry.
+Each piece of software was evaluated against this criteria, with the goal of both finding out which pieces of software were more successful over many parameters, and also to become more familiar with network visualisation software used in industry.
 
 \section{Data and Results}
 
@@ -79,7 +79,7 @@ After starting to run the experiments, it became clear that two pieces of softwa
 
 GUESS was software that never left beta, and was last developed in 2007. Having never been released meant that the software had fairly little documentation and what it did have was not comprehensive. On top of this, the wiki created for it was no longer hosted online which meant many of the links to documentation on the website were broken. Despite it looking promising, it became clear it would not be usable.
 
-SNAP could not be compared to much of the criteria as the purpose of it is to analyse and manipulate graphs, as opposed to visualising them. However, time was spent reading it’s documentation and going through all the sample code snippets to understanding how the software worked to some degree. The reason this was done was that it both felt important to have some knowledge of how network manipulation software worked, and also depending on the direction the project took, network manipulation may well be used in order to bundle edges or nodes in order to increase performance of massive networks.
+SNAP could not be compared to much of the criteria as the purpose of it is to analyse and manipulate networks, as opposed to visualising them. However, time was spent reading it’s documentation and going through all the sample code snippets to understanding how the software worked to some degree. The reason this was done was that it both felt important to have some knowledge of how network manipulation software worked, and also depending on the direction the project took, network manipulation may well be used in order to bundle edges or nodes in order to increase performance of massive networks.
 
 The rest of the software however was analysed against the above criteria and the results are documented below.
 
@@ -89,7 +89,7 @@ This was the first software package that was as expected, and was fairly easy to
 
 \subsection{Graphviz}
 
-Graphviz was difficult to test, being a collection of software as opposed to a single package. Most of the packages were not fit for purpose, often displaying data in charts, for example. The package I ended up testing was "sfdp". Although it fitted most of the criteria and claimed to support large networks, it turned out to be very focused on visualising far smaller networks with little support for anything of a few thousand nodes or more. The documentation was clear, and the software had the ability to import and export a to very large amount of file formats. It also supported zooming/panning, but the User Interface clearly was not build around supporting large networks, with information becoming very unclear quickly - see Figure \ref{fig:graphviz}. There was also no explicit support for visualising massive networks.
+Graphviz was difficult to test, being a collection of software as opposed to a single package. Most of the packages were not fit for purpose, often displaying data in charts, for example. The package I ended up testing was ``sfdp''. Although it fitted most of the criteria and claimed to support large networks, it turned out to be very focused on visualising far smaller networks with little support for anything of a few thousand nodes or more. The documentation was clear, and the software had the ability to import and export a to very large amount of file formats. It also supported zooming/panning, but the User Interface clearly was not build around supporting large networks, with information becoming very unclear quickly - see Figure \ref{fig:graphviz}. There was also no explicit support for visualising massive networks.
 
 \begin{figure}
     \centering
@@ -154,12 +154,12 @@ See Table \ref{table:massive-network} for details what features the software had
     \centering
     \begin{tabular}{|l|l|l|l|}
         \hline
-                 & Massive Graph Layout Options & Node bundling & Edge bundling \\ \hline
-        Gephi    & \tmark                       & \cmark        & \cmark        \\ \hline
-        GraphViz & \cmark                       & \cmark        & \cmark        \\ \hline
-        Tulip    & \tmark                       & \tmark        & \tmark        \\ \hline
-        D3.js    & n/a                          & n/a           & n/a           \\ \hline
-        Vis.js   & \cmark                       & \tmark        & \cmark        \\ \hline
+                 & Massive Network Layout Options & Node bundling & Edge bundling \\ \hline
+        Gephi    & \tmark                         & \cmark        & \cmark        \\ \hline
+        GraphViz & \cmark                         & \cmark        & \cmark        \\ \hline
+        Tulip    & \tmark                         & \tmark        & \tmark        \\ \hline
+        D3.js    & n/a                            & n/a           & n/a           \\ \hline
+        Vis.js   & \cmark                         & \tmark        & \cmark        \\ \hline
     \end{tabular}
     \caption{This shows what support each of the software packages had for massive networks. D3.js has n/a in all cells as it does not support these features natively. However, D3 is built on using third party packages and libraries and some of these packages support several different massive network solutions, including the ones analysed for above.}
     \label{table:massive-network}
@@ -171,12 +171,12 @@ See Table \ref{table:other_info} for details on how long it took to create a sim
     \centering
     \begin{tabular}{|l|l|l|l|l|l|}
         \hline
-                                                      & Gephi     & GraphViz   & Tulip    & D3.js      & Vis.js    \\ \hline
-        Time until hardcoded graph could be created   & 5 minutes & 30 minutes & 1 minute & 30 minutes & 5 minutes \\ \hline
-        Visualisation could be dynamic                & \tmark    & \cmark     & \tmark   & n/a        & \cmark    \\ \hline
-        Graphical Options                             & \tmark    & \tmark     & \tmark   & \tmark     & \cmark    \\ \hline
-        Ability to view in 3D                         & \tmark    & \cmark     & \tmark   & \tmark     & \tmark    \\ \hline
-        Network could be multivariate                 & \tmark    & \tmark     & \tmark   & \tmark     & \cmark    \\ \hline
+                                                                    & Gephi     & GraphViz   & Tulip    & D3.js      & Vis.js    \\ \hline
+        Time until hardcoded network could be created (minutes)     & 5         & 30         & 1        & 30         & 5         \\ \hline
+        Visualisation could be dynamic                              & \tmark    & \cmark     & \tmark   & n/a        & \cmark    \\ \hline
+        Graphical Options                                           & \tmark    & \tmark     & \tmark   & \tmark     & \cmark    \\ \hline
+        Ability to view in 3D                                       & \tmark    & \cmark     & \tmark   & \tmark     & \tmark    \\ \hline
+        Network could be multivariate                               & \tmark    & \tmark     & \tmark   & \tmark     & \cmark    \\ \hline
     \end{tabular}
     \caption{This shows additional information about the network visualisation software. For whether the visualisation could be dynamic, D3 - again - does not support this natively, but with additional libraries, it could.}
     \label{table:other_info}
@@ -197,7 +197,7 @@ Despite the aforementioned challenges, a lot of useful information was gained th
     \item Networks can be multivariate
 \end{itemize}
 
-However, it also rendered networks significantly faster than the other software, supported displaying massive networks in many ways (such as advanced layout options and node/edge bundling), could visualise dynamic information and the software makes it very easy to generate graphs which made testing easier and more informative. 
+However, it also rendered networks significantly faster than the other software, supported displaying massive networks in many ways (such as advanced layout options and node/edge bundling), could visualise dynamic information and the software makes it very easy to generate networks which made testing easier and more informative. 
 
 Additionally, Tulip has a full C++ API, and a full Python wrapper around the C++ API, meaning one can interface with it fully in either of the two languages, and a very simple file format, .tlp (of which more information can be found on their website \cite{tuliptlp}), which means that networks can easily be created by hand or converted to and from it's format to other formats such as JSON.
 
@@ -221,7 +221,7 @@ For each of the above tests, each run would have it's performance evaluated (fro
 
 \subsection{Evaluation of existing systems}
 
-For each of the standalone systems evaluated in Section \ref{sec:systematic-review} - which were Gephi, GraphViz and Tulip - explore where each of the packages begin to struggle to display networks clearly or quickly and why. This would include analysing the amount of time taken to run on different data sets, and for massive data sets, discover what task in particular makes it take as long as it would to display. Possible reasons could be that the network can't fit in RAM so data is constantly being put onto and pulled off of backing storage, or that algorithms have exponential performance which is negligible for a while but as networks get massive this performance starts to take it's toll. 
+For each of the standalone systems evaluated in Section \ref{sec:systematic-review} - which were Gephi, GraphViz and Tulip - explore where each of the packages begin to struggle to display networks clearly or quickly and why. This would include analysing the amount of time taken to run on different datasets, and for massive datasets, discover what task in particular makes it take as long as it would to display. Possible reasons could be that the network can't fit in RAM so data is constantly being put onto and pulled off of backing storage, or that algorithms have exponential performance which is negligible for a while but as networks get massive this performance starts to take it's toll. 
 
 Additionally, it would look at how effective the visualisations that created were at imparting knowledge to the user. This analysis would both take into account the quality of the visualisation baring in mind how long it took, and also how clear the visualisation was, regardless of time taken to create it. 
 
